# pdq

./: BUGS  CHANGELOG  INSTALL  Makefile.in  Mk  README  README.md  aclocal.m4  configure  configure.ac  mkinstalldirs
doc/: Makefile.in  lpd_cancel.1  lpd_print.1  lpd_status.1  pdq.1.in  pdqstat.1  printrc.5.in  rfc1179.txt  xpdq.1.in
etc/: Makefile.in  printrc.example.in
etc/drivers/generic/: generic-postscript-1.2  generic-text-only-1.1  printcap-emulation-1.0
etc/drivers/ghostscript/: gs-bjc600-0.1  gs-bjc800-0.1  gs-cdj1600-0.1  gs-cdj500-0.1  gs-cdj550-0.1  gs-cdj670-0.1  gs-cdj850-0.1  gs-cdj890-0.1  gs-declj250-0.1  gs-pjtest-0.1  gs-pjxl300-0.1  gs-pjxltest-0.1  gs-stcolor-0.1  gs-uniprint-simple-0.1
etc/drivers/misc/: hp-laserjet-5-0.9
etc/drivers/postscript/: hp-2500-cm-2.0  hp-4050-tn-1.0  qms-magicolor-cx-1.1
etc/interfaces/: appletalk-1.0  bsd-lpd-2.0  efax-0.1  local-port-1.0  tcp-port-2.0
gs_drivers/: ghostscript_devices  make_gs_drivers.pl
lpd/: Makefile.in  lpd_cancel.c  lpd_interface.c  lpd_interface.h  lpd_print.c  lpd_status.c
src/: Makefile.in  README  argument.c  argument.h  driver.c  driver.h  environment.c  environment.h  interface.c  interface.h  job.c  job.h  lex.c  lex.h  list.c  list.h  option.c  option.h  parse.c  parse.h  parse_rc.c  parse_rc.h  pdq_main.c  pdq_usage.c  pdq_usage.h  printer.c  printer.h  rc_items.c  rc_items.h  reaper.c  reaper.h  shepherd.c  shepherd.h  util.c  util.h  xpdq.h  xpdq_job.c  xpdq_main.c  xpdq_option.c  xpdq_preferences.c  (+2 more)
